--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     ]
   },
   "require": {
-    "php": ">=5.5.9",
+    "php": "^5.5.9 || ^7.0",
     "composer/installers": "~1.0",
     "frozzare/tank": "^1.1"
   },
