--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   "require": {
     "php": "^5.5.9 || ^7.0",
     "composer/installers": "~1.0",
-    "frozzare/tank": "^1.1"
+    "frozzare/tank": "dev-master"
   },
   "require-dev": {
     "frozzare/wp-test-suite": "~1.0",
