--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,15 @@ language: php
 
 sudo: false
 
+php:
+  - 5.6
+  - 7.0
+  - 7.1
+
+env:
+  - WP_VERSION=4.1 WP_MULTISITE=0
+  - WP_VERSION=latest WP_MULTISITE=0
+
 install:
   - travis_retry composer self-update
   - travis_retry composer install --no-interaction --prefer-source
@@ -19,21 +28,6 @@ after_script:
 cache:
   directories:
   - $HOME/.composer/cache
-
-matrix:
-  include:
-    - php: 5.6
-      env: WP_VERSION=4.1 WP_MULTISITE=1
-    - php: 7.0
-      env: WP_VERSION=latest WP_MULTISITE=0
-    - php: 7.1
-      env: WP_VERSION=latest WP_MULTISITE=0
-    - php: 7.0
-      env: WP_VERSION=nightly WP_MULTISITE=0
-  allow_failures:
-    - php: 7.0
-      env: WP_VERSION=nightly WP_MULTISITE=0
-  fast_finish: true
 
 branches:
   only:
