Add recaptcha field

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
       "src/"
     ],
     "files": [
-      "src/helpers.php"
+      "src/helpers.php",
+      "src/fields.php"
     ]
   },
   "require": {
