--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
       "src/"
     ],
     "files": [
-      "src/helpers.php",
-      "src/fields.php"
+      "src/helpers.php"
     ]
   },
   "require": {
